# real-estate-backend

./: .env  .env.example  .gitignore  LICENSE  README.md  add-property.html  admin_routes.py  agent_routes.py  app.py  auth.js  auth_routes.py  chat_events.py  chat_routes.py  dashboard.html  edit-property.html  extensions.py  index.html  init_db.py  login.html  main.py  models.py  properties.db  property-details.html  property.js  property_routes.py  pyproject.toml  requirements.txt  seed.py  signup.html  template_routes.py
app/: __init__.py  auth_routes.py  config.py  models.py  routes.py  views.py
templates/: about.html  account-settings.html  add-property.html  admin.html  agent_detail.html  agents.html  alerts.html  auth.html  base.html  blog.html  clients.html  contact.html  dashboard-agency.html  dashboard-buyer-renter.html  dashboard-independent.html  dashboard-landlord.html  dashboard-private.html  dashboard.html  diy-sell.html  edit-property.html  evaluation.html  favorites.html  for-owners.html  index.html  instant-offer.html  join-as-agent.html  login.html  manage-properties  manage-properties.html  market-trends.html  market.html  mortgage.html  newsletter_preferences.html  privacy.html  private-agent.html  properties-page.html  properties.html  property-details.html  property_detail.html  reports.html  (+6 more)
tests/: conftest.py  test_about_route.py  test_admin_access.py  test_auth.py  test_contact_route.py  test_diy_sell_route.py  test_error_branches.py  test_error_handling.py  test_instant_offer_route.py  test_invalid_requests.py  test_join_as_agent_route.py  (+5 more)
(+8 files in other folders)
