[project]
name = "real-estate-backend"
version = "0.1.0"
description = ""
authors = ["Real Estate Team <team@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-cors>=5.0.1",
    "flask-limiter>=3.10.1",
    "cloudinary>=1.42.2",
    "python-decouple>=3.8",
    "gunicorn>=23.0.0",
    "marshmallow>=3.19.0",
    "google-auth-oauthlib>=1.2.1",
    "psycopg2-binary>=2.9.9",
    "google-auth>=2.29.0",
    "facebook-sdk>=3.1.0",
]
